--- a/package.json
+++ b/package.json
@@ -39,13 +39,12 @@
     "dist"
   ],
   "types": "dist/index.d.ts",
-  "dependencies": {
-    "eslint-plugin-jest": "^27.1.3",
-    "eslint-plugin-prettier": "^4.2.1"
-  },
   "devDependencies": {
+    "@chakra-ui/react": "^2.3.6",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^9.0.2",
@@ -57,22 +56,27 @@
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "4.3.0",
+    "framer-motion": "^7.6.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^3.2.3",
     "rollup-plugin-dts": "^5.0.0",
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
     "@types/react": "^18.0.21",
-    "typescript": "^4.8.4",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.8.4"
   }
 }
