--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/azrael3199"
   },
+  "engines": {
+    "npm": "none",
+    "yarn": ">= 1.22.19"
+  },
   "scripts": {
     "postinstall": "husky install",
     "commit": "git-cz",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --passWithNoTests",
     "rollup": "rollup -c",
     "build:dist": "rollup"
   },
@@ -48,6 +52,7 @@
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^9.0.2",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.21",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "commitizen": "^4.2.5",
@@ -65,10 +70,12 @@
     "eslint-plugin-react-hooks": "4.3.0",
     "framer-motion": "^7.6.1",
     "husky": "^8.0.1",
+    "jest": "^29.2.2",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "rollup": "^3.2.3",
     "rollup-plugin-dts": "^5.0.0",
     "typescript": "^4.8.4"
