--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
   "scripts": {
     "postinstall": "husky install",
     "commit": "git-cz",
-    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx",
     "test": "jest --passWithNoTests",
-    "rollup": "rollup -c",
-    "build:dist": "rollup"
+    "build": "rimraf dist && rollup -c"
   },
   "config": {
     "commitizen": {
@@ -23,7 +22,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
+    "*.{js,jsx,ts,tsx}": [
       "eslint"
     ]
   },
@@ -37,8 +36,6 @@
     "url": "https://github.com/azrael3199/react-simple-ui/issues"
   },
   "homepage": "https://github.com/azrael3199/react-simple-ui#readme",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
@@ -53,7 +50,7 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^9.0.2",
     "@testing-library/react": "^13.4.0",
-    "@types/react": "^18.0.21",
+    "@types/react": "^18.0.24",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
@@ -76,6 +73,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
+    "rimraf": "^3.0.2",
     "rollup": "^3.2.3",
     "rollup-plugin-dts": "^5.0.0",
     "typescript": "^4.8.4"
